[project]
name = "prose"
version = "3.3.4"
description = "Modular image processing pipelines for Astronomy"
authors = [{ name = "Lionel Garcia" }]
license = { text = "MIT" }
requires-python = "<3.12,>=3.9"
dependencies = [
    "numpy<2.0.0,>=1.23.5",
    "astropy<6.0.0,>=5.1.1",
    "astroquery<1.0.0,>=0.4.6",
    "requests<3.0.0,>=2.31.0",
    "ipython",
    "scipy",
    "matplotlib",
    "scikit-image<1.0.0,>=0.21.0",
    "pandas>1.1",
    "tqdm",
    "photutils<2.0.0,>=1.6.0",
    "pyyaml",
    "tabulate",
    "sep",
    "celerite2",
    "twirl==0.4.0",
    "multiprocess",
    "pytest",
    "imageio[ffmpeg]",
]
readme = "README.md"


[project.scripts]
fitsmanager = "prose.scripts.fitsmanager:main"

[project.optional-dependencies]
dev-dependencies = ["pytest", "black"]
jax = ["jax<1.0.0,>=0.4.26", "jaxopt"]
docs = [
    "sphinx",
    "docutils",
    "jupyterlab",
    "myst-parser",
    "sphinx-book-theme<2.0.0,>=1.0.0",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx-design",
    "toml",
    "ipywidgets",
]

[tool.pdm.build]
includes = ["prose/io/*.sql"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
